--- a/about.html
+++ b/about.html
@@ -21,37 +21,34 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
 <body>
-<div class="container-fluid bg-light position-relative shadow">
-    <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
-        <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 50px;">
-            <i class="flaticon-043-teddy-bear"></i>
-            <span class="text-primary">Qurious</span>
-        </a>
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-            <div class="navbar-nav font-weight-bold mx-auto py-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="class.html" class="nav-item nav-link">Classes</a>
-                <a href="team.html" class="nav-item nav-link">Team</a>
-                <a href="gallery.html" class="nav-item nav-link">Gallery</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu rounded-0 m-0">
-                        <a href="blog.html" class="dropdown-item">Blog Grid</a>
- 
+    <div class="container-fluid bg-light position-relative shadow">
+        <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-0 px-lg-5">
+            <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 50px;">
+                <i class="flaticon-043-teddy-bear"></i>
+                <span class="text-primary">
+                    <img src="img/logo.png" alt="Qurious" height="150px" width="150px">
+                </span>
+            </a>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                <div class="navbar-nav font-weight-bold mx-auto py-0">
+                    <a href="index.html" class="nav-item nav-link ">Home</a>
+                    <a href="about.html" class="nav-item nav-link">About</a>
+                    <a href="class.html" class="nav-item nav-link">Classes</a>
+                    <a href="team.html" class="nav-item nav-link">Team</a>
+                    <a href="gallery.html" class="nav-item nav-link">Gallery</a>
+                    
+                            <a href="blog.html" class="nav-item nav-link">Blog </a>
+                            <a href="Contact.html" class="nav-item nav-link">Contact</a>
                     </div>
+                    
                 </div>
-                <a href="contact.html" class="nav-item nav-link active">Contact</a>
-
-
+                <a href="" class="btn btn-primary px-4">Join Class</a>
             </div>
-            <a href="" class="btn btn-primary px-4">Join Class</a>
-        </div>
-    </nav>
-</div>
+        </nav>
+    </div>
 <div class="container-fluid py-5">
     <div class="container">
         <div class="row align-items-center">
