--- a/contact.html
+++ b/contact.html
@@ -41,14 +41,13 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav font-weight-bold mx-auto py-0">
-                    <a href="index.html" class="nav-item nav-link ">Home</a>
+                    <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
                     <a href="class.html" class="nav-item nav-link">Classes</a>
                     <a href="team.html" class="nav-item nav-link">Team</a>
                     <a href="gallery.html" class="nav-item nav-link">Gallery</a>
-                    
-                            <a href="blog.html" class="nav-item nav-link">Blog </a>
-                            <a href="Contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="blog.html" class="nav-item nav-link">Blog </a>
+                    <a href="Contact.html" class="nav-item nav-link active">Contact</a>
                     </div>
                     
                 </div>
@@ -56,7 +55,6 @@
             </div>
         </nav>
     </div>
-  
     <!-- Navbar End -->
 
 
@@ -78,7 +76,9 @@
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="text-center pb-2">
-                <p class="section-title px-5"><span class="px-2">Get In Touch</span></p>
+                <p class="section-title px-5"><span class="px-2">
+                   <strong> Get In Touch</strong>
+                   </span></p>
                 <h1 class="mb-4">Contact Us For Any Query</h1>
             </div>
             <div class="row">
@@ -114,28 +114,30 @@
                         <i class="fa fa-map-marker-alt d-inline-flex align-items-center justify-content-center bg-primary text-secondary rounded-circle" style="width: 45px; height: 45px;"></i>
                         <div class="pl-3">
                             <h5>Address</h5>
-                            <p>Ahmedabad Gujarat</p>
+                            <p>Ahmedabad, Gujarat</p>
                         </div>
                     </div>
                     <div class="d-flex">
                         <i class="fa fa-envelope d-inline-flex align-items-center justify-content-center bg-primary text-secondary rounded-circle" style="width: 45px; height: 45px;"></i>
                         <div class="pl-3">
                             <h5>Email</h5>
-                            <p>Qurious@gmail.com</p>
+                            <p>qurious.eduhelp@gmail.com</p>
                         </div>
                     </div>
                     <div class="d-flex">
                         <i class="fa fa-phone-alt d-inline-flex align-items-center justify-content-center bg-primary text-secondary rounded-circle" style="width: 45px; height: 45px;"></i>
                         <div class="pl-3">
                             <h5>Phone</h5>
-                            <p>8735925858</p>
+                            <p>+91 8735925858
+                                <br>
+                            +91 7383559110</p>
                         </div>
                     </div>
                     <div class="d-flex">
                         <i class="far fa-clock d-inline-flex align-items-center justify-content-center bg-primary text-secondary rounded-circle" style="width: 45px; height: 45px;"></i>
                         <div class="pl-3">
                             <h5>Opening Hours</h5>
-                            <strong>Sunday - Saturday:</strong>
+                            <strong>Monday - Saturday</strong>
                             <p class="m-0">03:00 PM - 10:00 PM </p>
                         </div>
                     </div>
@@ -149,18 +151,20 @@
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="" class="navbar-brand font-weight-bold text-primary m-0 mb-4 p-0" style="font-size: 40px; line-height: 40px;">
                     <i class="flaticon-043-teddy-bear"></i>
-                    <span class="text-white">Qurious</span>
+                    <span class="text-white">
+                        <img src="E:\logo.png" alt="Qurious" height="150px" width="150px">
+                    </span>
                 </a>
-                <p>Qurious to Victorious.</p>
+                <p>From Qurious to Victorious.</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
                         style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
                         style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
-                        style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        style="width: 38px; height: 38px;" href="https://www.linkedin.com/company/101927386/admin/feed/posts/?feedType=following"><i class="fab fa-linkedin-in"></i></a>
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
-                        style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
+                        style="width: 38px; height: 38px;" href="https://www.instagram.com/quriousinnovate/"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
@@ -169,33 +173,36 @@
                     <h4 class="fa fa-map-marker-alt text-primary"></h4>
                     <div class="pl-3">
                         <h5 class="text-white">Address</h5>
-                        <p>Ahmedabad Gujarat</p>
+                        <p>Ahmedabad, Gujarat</p>
                     </div>
                 </div>
                 <div class="d-flex">
                     <h4 class="fa fa-envelope text-primary"></h4>
                     <div class="pl-3">
                         <h5 class="text-white">Email</h5>
-                        <p>Qurious@gmail.com</p>
+                        <p>qurious.eduhelp@gmail.com</p>
                     </div>
                 </div>
                 <div class="d-flex">
                     <h4 class="fa fa-phone-alt text-primary"></h4>
                     <div class="pl-3">
                         <h5 class="text-white">Phone</h5>
-                        <p>+8735925858</p>
+                        <p>+91 8735925858
+                             <br>
+                            +91 7383559110
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h3 class="text-primary mb-4">Quick Links</h3>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Team</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Blog</a>
-                    <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                    <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
+                            <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>About Us</a>
+                            <a class="text-white mb-2" href="class.html"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
+                            <a class="text-white mb-2" href="team.html"><i class="fa fa-angle-right mr-2"></i>Our Team</a>
+                            <a class="text-white mb-2" href="blog.html"><i class="fa fa-angle-right mr-2"></i>Our Blog</a>
+                            <a class="text-white" href="Contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
