--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav font-weight-bold mx-auto py-0">
-                    <a href="index.html" class="nav-item nav-link ">Home</a>
+                    <a href="index.html" class="nav-item nav-link active">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
                     <a href="class.html" class="nav-item nav-link">Classes</a>
                     <a href="team.html" class="nav-item nav-link">Team</a>
@@ -134,8 +134,8 @@
                 <div class="col-lg-4 mb-5">
                     <a href="blog/influencer.html">
                         <div class="card border-0 bg-light shadow-sm pb-2">
-                            <img class="card-img-top mb-2" src="img/influencer.jpg" alt=""
-                                style="height: 225px;width: 250px;transform: translate(100px);">
+                            <img class="card-img-top mb-2" src="img/influencer.png" alt=""
+                                style="height: 225px;width: 350px;">
                             <div class="card-body text-center">
                                 <h4 class="card-title">Influencer </h4>
                                 <p class="card-text">Influencer is an individual who has built a dedicated online audience
@@ -182,9 +182,9 @@
                             <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
                                 style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
-                                style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                style="width: 38px; height: 38px;" href="https://www.linkedin.com/company/101927386/admin/feed/posts/?feedType=following"><i class="fab fa-linkedin-in"></i></a>
                             <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
-                                style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
+                                style="width: 38px; height: 38px;" href="https://www.instagram.com/quriousinnovate"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5">
@@ -218,8 +218,8 @@
                         <h3 class="text-primary mb-4">Quick Links</h3>
                         <div class="d-flex flex-column justify-content-start">
                             <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                            <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
+                            <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>About Us</a>
+                            <a class="text-white mb-2" href="class.html"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
                             <a class="text-white mb-2" href="team.html"><i class="fa fa-angle-right mr-2"></i>Our Team</a>
                             <a class="text-white mb-2" href="blog.html"><i class="fa fa-angle-right mr-2"></i>Our Blog</a>
                             <a class="text-white" href="Contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
