--- a/gallery.html
+++ b/gallery.html
@@ -38,7 +38,7 @@
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="class.html" class="nav-item nav-link">Classes</a>
                 <a href="team.html" class="nav-item nav-link">Team</a>
-                <a href="gallery.html" class="nav-item nav-link">Gallery</a>
+                <a href="gallery.html" class="nav-item nav-link active">Gallery</a>
                 
                         <a href="blog.html" class="nav-item nav-link">Blog </a>
                         <a href="Contact.html" class="nav-item nav-link">Contact</a>
@@ -165,9 +165,9 @@
                 <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
                     style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
-                    style="width: 38px; height: 38px;" href="#"><i class="fab fa-linkedin-in"></i></a>
+                    style="width: 38px; height: 38px;" href="https://www.linkedin.com/company/101927386/admin/feed/posts/?feedType=following"><i class="fab fa-linkedin-in"></i></a>
                 <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
-                    style="width: 38px; height: 38px;" href="#"><i class="fab fa-instagram"></i></a>
+                    style="width: 38px; height: 38px;" href="https://www.instagram.com/quriousinnovate"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
