--- a/gallery.html
+++ b/gallery.html
@@ -41,11 +41,11 @@
                 <a href="gallery.html" class="nav-item nav-link active">Gallery</a>
                 
                         <a href="blog.html" class="nav-item nav-link">Blog </a>
-                        <a href="Contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
                 
             </div>
-            <a href="" class="btn btn-primary px-4">Join Class</a>
+            <a href="class.html" class="btn btn-primary px-4">Join Class</a>
         </div>
     </nav>
 </div>
