--- a/about.html
+++ b/about.html
@@ -43,11 +43,11 @@
                     <a href="gallery.html" class="nav-item nav-link">Gallery</a>
 
                     <a href="blog.html" class="nav-item nav-link">Blog </a>
-                    <a href="Contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
 
             </div>
-            <a href="" class="btn btn-primary px-4">Join Class</a>
+            <a href="class.html" class="btn btn-primary px-4">Join Class</a>
     </div>
     </nav>
     </div>
