--- a/blog.html
+++ b/blog.html
@@ -167,11 +167,11 @@
           <a href="team.html" class="nav-item nav-link">Team</a>
           <a href="gallery.html" class="nav-item nav-link">Gallery</a>
           <a href="blog.html" class="nav-item nav-link active">Blog </a>
-          <a href="Contact.html" class="nav-item nav-link">Contact</a>
+          <a href="contact.html" class="nav-item nav-link">Contact</a>
         </div>
 
       </div>
-      <a href="" class="btn btn-primary px-4">Join Class</a>
+      <a href="class.html" class="btn btn-primary px-4">Join Class</a>
   </div>
   </nav>
  <!-- Navbar End -->
