--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
+    <style>style="
+    /* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  /* CSS rules here */
+}
+
+/* Laptop devices (laptops, 1024px and up) */
+@media only screen and (min-width: 1024px) {
+ #showmore{
+    transform: translate(450px);
+}}
+    </style>
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
@@ -162,7 +174,7 @@
                     </a>
                 </div>
             </div>
-            <a href="blog.html" class="btn btn-primary px-4 mx-auto mb-4" style="transform: translate(450px);">Show More Blogs</a>
+            <a href="blog.html" class="btn btn-primary px-4 mx-auto mb-4" id="showmore">Show More Blogs</a>
         </div>
     </div>
             <div class="container-fluid bg-secondary text-white mt-5 py-5 px-sm-3 px-md-5">
