--- a/index.html
+++ b/index.html
@@ -26,13 +26,18 @@
     /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   /* CSS rules here */
+
 }
 
 /* Laptop devices (laptops, 1024px and up) */
 @media only screen and (min-width: 1024px) {
  #showmore{
     transform: translate(450px);
-}}
+}
+#a22{
+    height: 225px;width: 350px;
+}
+}
     </style>
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
@@ -147,7 +152,7 @@
                     <a href="blog/influencer.html">
                         <div class="card border-0 bg-light shadow-sm pb-2">
                             <img class="card-img-top mb-2" src="img/influencer.png" alt=""
-                                style="height: 225px;width: 350px;">
+                            >
                             <div class="card-body text-center">
                                 <h4 class="card-title">Influencer </h4>
                                 <p class="card-text">Influencer is an individual who has built a dedicated online audience
@@ -162,7 +167,7 @@
                     <a href="blog/Industry,html.html">
                         <div class="card border-0 bg-light shadow-sm pb-2">
                             <img class="card-img-top mb-2" src="img/industry.jpg" alt=""
-                                style="height: 230px;width: 350px;">
+                              >
                             <div class="card-body text-center">
                                 <h4 class="card-title">Industry</h4>
                                 <p class="card-text">The industrial sector encompasses various industries involved in the
