--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   /* CSS rules here */
+  #a22{
+    width:70px
+  }
 
 }
 
