--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                     </div>
                 </section>
 
-                <section class="testimonials">
+                <!-- <section class="testimonials">
                     <h2>Student Success Stories</h2>
                     <div class="row">
                         <div class="col-md-6">
@@ -124,7 +124,7 @@
                             </blockquote>
                         </div>
                     </div>
-                </section>
+                </section> -->
 
                 <section class="benefits">
                     <h2>Why Choose Qurious?</h2>
@@ -163,7 +163,7 @@
                         <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
                             style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
-                            style="width: 38px; height: 38px;" href="https://www.linkedin.com/company/101927386/admin/feed/posts/?feedType=following"><i class="fab fa-linkedin-in"></i></a>
+                            style="width: 38px; height: 38px;" href="https://www.linkedin.com/company/getqurious/about/?viewAsMember=true"><i class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
                             style="width: 38px; height: 38px;" href="https://www.instagram.com/quriousinnovate"><i class="fab fa-instagram"></i></a>
                     </div>
