--- a/contact.html
+++ b/contact.html
@@ -162,7 +162,7 @@
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
                         style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
-                        style="width: 38px; height: 38px;" href="https://www.linkedin.com/company/101927386/admin/feed/posts/?feedType=following"><i class="fab fa-linkedin-in"></i></a>
+                        style="width: 38px; height: 38px;" href="https://www.linkedin.com/company/getqurious/about/?viewAsMember=true"><i class="fab fa-linkedin-in"></i></a>
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
                         style="width: 38px; height: 38px;" href="https://www.instagram.com/quriousinnovate/"><i class="fab fa-instagram"></i></a>
                 </div>
