--- a/index.html
+++ b/index.html
@@ -185,6 +185,58 @@
             <a href="blog.html" class="btn btn-primary px-4 mx-auto mb-4" id="showmore">Show More Blogs</a>
         </div>
     </div>
+    <div class="container-fluid py-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-7 mb-5 mb-lg-0">
+                    <p class="section-title pr-5"><span class="pr-2">Book A Seat</span></p>
+                    <h1 class="mb-4">Book A Seat For Your child</h1>
+ <p>   we provide a many career exploaration activities to explore your interest and work upon it we provide perticular skill training also so u can expand your interest</h1>
+                </p>
+                    <ul class="list-inline m-0">
+                        <li class="py-2"><i class="fa fa-check text-success mr-3"></i>Personalized guidance from expert counselors
+                                                              
+                            </li>
+                        <li class="py-2"><i class="fa fa-check text-success mr-3"></i>Interactive workshops and activities
+                        </li>
+                        <li class="py-2"><i class="fa fa-check text-success mr-3"></i>Career exploration tools and resources</li>
+                    </ul>
+                    <a href="" class="btn btn-primary mt-4 py-2 px-4">Book Now</a>
+                </div>
+                <div class="col-lg-5">
+                    <div class="card border-0">
+                        <div class="card-header bg-secondary text-center p-4">
+                            <h1 class="text-white m-0">Book A Seat</h1>
+                        </div>
+                        <div class="card-body rounded-bottom bg-primary p-5">
+                            <form action="https://formspree.io/f/mqkrbqgl" method="post">
+                                <div class="form-group">
+                                    <input type="text" name="name" class="form-control border-0 p-4" placeholder="Your Name" required="required" />
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" name="email" class="form-control border-0 p-4" placeholder="Your Email" required="required" />
+                                </div>
+                                <div class="form-group">
+                                    <select class="custom-select border-0 px-4" style="height: 47px;" name="class">
+                                        <option selected>Select A Class</option>
+                                        <option value="5">Class 5</option>
+                                        <option value="6">Class 6</option>
+                                        <option value="7">Class 7</option>
+                                        <option value="8">Class 8</option>
+                                        <option value="9">Class 9</option>
+                                     
+                                    </select>
+                                </div>
+                                <div>
+                                    <button class="btn btn-secondary btn-block border-0 py-3" type="submit">Book Now</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
             <div class="container-fluid bg-secondary text-white mt-5 py-5 px-sm-3 px-md-5">
                 <div class="row pt-5">
                     <div class="col-lg-3 col-md-6 mb-5">
@@ -202,7 +254,7 @@
                             <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
                                 style="width: 38px; height: 38px;" href="#"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
-                                style="width: 38px; height: 38px;" href="https://www.linkedin.com/company/101927386/admin/feed/posts/?feedType=following"><i class="fab fa-linkedin-in"></i></a>
+                                style="width: 38px; height: 38px;" href="https://www.linkedin.com/company/getqurious/about/?viewAsMember=true"><i class="fab fa-linkedin-in"></i></a>
                             <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
                                 style="width: 38px; height: 38px;" href="https://www.instagram.com/quriousinnovate"><i class="fab fa-instagram"></i></a>
                         </div>
@@ -266,6 +318,7 @@
                 </div>
 
             </div>
+
 
             <a href="#" class="btn btn-primary p-3 back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
