--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                             style="font-size: 40px; line-height: 40px;">
                             <i class="flaticon-043-teddy-bear"></i>
                             <span class="text-white">
-                                <img src="D:\Qurious_Logo.png" alt="Qurious" height="150px" width="150px">
+                                <img src="img/logo.png" alt="Qurious" height="150px" width="150px">
                             </span>
                         </a>
                         <p>From Qurious to Victorious.</p>
@@ -338,7 +338,7 @@
             <!-- Template Javascript -->
             <script src="js/main.js"></script>
 
-
+            <script src="//code.tidio.co/o63pqxwjqrxcllnrmzbcddas6khhrwvg.js" async></script>
 </body>
 
 </html>
