--- a/team.html
+++ b/team.html
@@ -87,7 +87,7 @@
                             <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px;"
                                 href="#"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light text-center px-0" style="width: 38px; height: 38px;"
-                                href="#"><i class="fab fa-linkedin-in"></i></a>
+                                href="https://www.linkedin.com/in/riya-bhatt-1a237824b/"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <h4>Riya Bhatt</h4>
@@ -101,9 +101,9 @@
                             <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px;"
                                 href="#"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px;"
-                                href="#"><i class="fab fa-facebook-f"></i></a>
+                                href="#"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-outline-light text-center px-0" style="width: 38px; height: 38px;"
-                                href="#"><i class="fab fa-linkedin-in"></i></a>
+                                href="https://www.linkedin.com/in/memon-mahenoor-90bb49246/"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <h4>Mahenoor Menom</h4>
@@ -117,7 +117,7 @@
                             <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px;"
                                 href="#"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px;"
-                                href="#"><i class="fab fa-facebook-f"></i></a>
+                                href="#"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-outline-light text-center px-0" style="width: 38px; height: 38px;"
                                 href="#"><i class="fab fa-linkedin-in"></i></a>
                         </div>
@@ -206,7 +206,7 @@
                     style="font-size: 40px; line-height: 40px;">
                     <i class="flaticon-043-teddy-bear"></i>
                     <span class="text-white">
-                        <img src="D:\Qurious_Logo.png" alt="Qurious" height="150px" width="150px">
+                        <img src="img/logo.png" alt="Qurious" height="150px" width="150px">
 
                     </span>
                 </a>
