--- a/blog.html
+++ b/blog.html
@@ -370,7 +370,7 @@
           style="font-size: 40px; line-height: 40px;">
           <i class="flaticon-043-teddy-bear"></i>
           <span class="text-white">
-            <img src="D:\Qurious_Logo.png" alt="Qurious" height="150px" width="150px">
+            <img src="img/logo.png" alt="Qurious" height="150px" width="150px">
 
           </span>
         </a>
