--- a/gallery.html
+++ b/gallery.html
@@ -155,7 +155,7 @@
             <a href="" class="navbar-brand font-weight-bold text-primary m-0 mb-4 p-0" style="font-size: 40px; line-height: 40px;">
                 <i class="flaticon-043-teddy-bear"></i>
                 <span class="text-white">
-                    <img src="D:\Qurious_Logo.png" alt="Qurious" height="150px" width="150px">
+                    <img src="img/logo.png" alt="Qurious" height="150px" width="150px">
                 </span>
             </a>
             <p>From Qurious to Victorious.</p>
