--- a/class.html
+++ b/class.html
@@ -42,7 +42,7 @@
                     <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                     
                             <a href="blog.html" class="nav-item nav-link">Blog </a>
-                            <a href="Contact.html" class="nav-item nav-link">Contact</a>
+                            <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     
                 </div>
@@ -159,7 +159,7 @@
                     <a class="text-white mb-2" href="class.html"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
                     <a class="text-white mb-2" href="team.html"><i class="fa fa-angle-right mr-2"></i>Our Team</a>
                     <a class="text-white mb-2" href="blog.html"><i class="fa fa-angle-right mr-2"></i>Our Blog</a>
-                    <a class="text-white" href="ontact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                    <a class="text-white" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
