--- a/class copy.html
+++ b/class copy.html
@@ -12,7 +12,7 @@
         <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
         <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
-     
+        <link href="css/style.css" rel="stylesheet">
     </head>
 <body>
     <div class="container-fluid bg-light position-relative shadow">
