--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
-    <style>style="
+    <style>
     /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   /* CSS rules here */
@@ -68,9 +68,7 @@
                     <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                     <a href="blog.html" class="nav-item nav-link">Blog </a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
-                    </div>
                     
-                </div>
                 <a href="class.html" class="btn btn-primary px-4">Join Class</a>
             </div>
         </nav>
