--- a/contact.html
+++ b/contact.html
@@ -49,10 +49,10 @@
                     <a href="blog.html" class="nav-item nav-link">Blog </a>
                     <a href="contact.html" class="nav-item nav-link active">Contact</a>
                     </div>
-                    
+                    <a href="class.html" class="btn btn-primary px-4">Join Class</a>
+            
                 </div>
-                <a href="class.html" class="btn btn-primary px-4">Join Class</a>
-            </div>
+                 </div>
         </nav>
     </div>
     <!-- Navbar End -->
@@ -152,7 +152,7 @@
                 <a href="" class="navbar-brand font-weight-bold text-primary m-0 mb-4 p-0" style="font-size: 40px; line-height: 40px;">
                     <i class="flaticon-043-teddy-bear"></i>
                     <span class="text-white">
-                        <img src="E:\logo.png" alt="Qurious" height="150px" width="150px">
+                        <img src="img/logo.png" alt="Qurious" height="150px" width="150px">
                     </span>
                 </a>
                 <p>From Qurious to Victorious.</p>
