--- a/gallery.html
+++ b/gallery.html
@@ -35,9 +35,9 @@
                         <a href="blog.html" class="nav-item nav-link">Blog </a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                
+                <a href="class.html" class="btn btn-primary px-4">Join Class</a>
             </div>
-            <a href="class.html" class="btn btn-primary px-4">Join Class</a>
+           
         </div>
     </nav>
 </div>
@@ -139,7 +139,7 @@
           </div>-->
       </div>
   </div> 
-  <h1 style="transform: translateX(100px);">Coming soon..</h1>
+  <h1 >Coming soon..</h1>
 
   <div class="container-fluid bg-secondary text-white mt-5 py-5 px-sm-3 px-md-5">
     <div class="row pt-5">
