--- a/blog.html
+++ b/blog.html
@@ -33,12 +33,12 @@
       flex-wrap: wrap;
       justify-content: center;
       align-items: center;
-      margin: 25px;
-      transform: translate(86px);
+      margin: 20px;
+      transform: translateX(98px);
     }
 
     .card {
-      width: 270px;
+      width: 320px;
       height: 350px;
       margin: 10px;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -169,9 +169,9 @@
           <a href="blog.html" class="nav-item nav-link active">Blog </a>
           <a href="contact.html" class="nav-item nav-link">Contact</a>
         </div>
-
+        <a href="class.html" class="btn btn-primary px-4">Join Class</a>
       </div>
-      <a href="class.html" class="btn btn-primary px-4">Join Class</a>
+     
   </div>
   </nav>
  <!-- Navbar End -->
