--- a/class.html
+++ b/class.html
@@ -37,10 +37,10 @@
                             <a href="blog.html" class="nav-item nav-link">Blog </a>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
-                    
+                    <a href="class.html" class="btn btn-primary px-4">Join Class</a>
+            
                 </div>
-                <a href="" class="btn btn-primary px-4">Join Class</a>
-            </div>
+             </div>
         </nav>
     </div>
     <div class="container-fluid py-5">
