--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
 
-    <style>
+    <style>style="
     /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   /* CSS rules here */
@@ -48,6 +48,7 @@
 </head>
 
 <body>
+    <script src="//code.tidio.co/o63pqxwjqrxcllnrmzbcddas6khhrwvg.js" async></script>
     <div class="container-fluid bg-light position-relative shadow">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-0 px-lg-5">
             <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 50px;">
@@ -68,8 +69,10 @@
                     <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                     <a href="blog.html" class="nav-item nav-link">Blog </a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
-                    
-                <a href="class.html" class="btn btn-primary px-4">Join Class</a>
+                    </div>
+                    <a href="class.html" class="btn btn-primary px-4">Join Class</a>    
+                </div>
+               
             </div>
         </nav>
     </div>
@@ -292,7 +295,7 @@
                             <a class="text-white mb-2" href="class.html"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
                             <a class="text-white mb-2" href="team.html"><i class="fa fa-angle-right mr-2"></i>Our Team</a>
                             <a class="text-white mb-2" href="blog.html"><i class="fa fa-angle-right mr-2"></i>Our Blog</a>
-                            <a class="text-white" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                            <a class="text-white" href="Contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5">
@@ -336,7 +339,7 @@
             <!-- Template Javascript -->
             <script src="js/main.js"></script>
 
-            <script src="//code.tidio.co/o63pqxwjqrxcllnrmzbcddas6khhrwvg.js" async></script>
+
 </body>
 
 </html>
