--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
                                 <p class="card-text">The industrial sector encompasses various industries involved in the
                                     production, processing, and distribution of goods. In macroeconomics, an industry is a
                                     branch of an economy that produces a closely related set of raw materials, goods, or
-                                    services.</p>
+                                    services.The industrial sector offers a multitude of career paths catering to diverse interests and skillsets.
+
+                                </p>
                             </div>
                         </div>
                     </a>
