--- a/blog.html
+++ b/blog.html
@@ -33,18 +33,19 @@
       flex-wrap: wrap;
       justify-content: center;
       align-items: center;
-      margin: 20px;
-      transform: translateX(98px);
+      margin: 25px;
+      transform: translate(86px);
     }
 
     .card {
       width: 320px;
-      height: 350px;
+      height: 400px;
       margin: 10px;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
       border-radius: 10px;
       background-color: white;
       position: relative;
+      transform: translate(80px);
 
     }
 
@@ -116,33 +117,7 @@
       }
     }
 
-    @-o-keyframes AnimationName {
-      0% {
-        background-position: 0% 62%
-      }
 
-      50% {
-        background-position: 100% 39%
-      }
-
-      100% {
-        background-position: 0% 62%
-      }
-    }
-
-    @keyframes AnimationName {
-      0% {
-        background-position: 0% 62%
-      }
-
-      50% {
-        background-position: 100% 39%
-      }
-
-      100% {
-        background-position: 0% 62%
-      }
-    }
   </style>
 </head>
 
