learn more page

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                     No one can predict the future, and yet WE the parents,
                     education, and we are trying to prepare our children for it..</p>
-                <a href="contact.html" class="btn btn-secondary mt-1 py-3 px-5">Learn More</a>
+                <a href="learrnmore.html" class="btn btn-secondary mt-1 py-3 px-5">Learn More</a>
             </div>
             <div class="col-lg-6 text-center text-lg-right">
                 <img class="img-fluid mt-5" src="img/header.png" alt="">
