learn more page

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             </ul>
                         </div>
                     </div>
-                    <a href="contact.html" class="btn btn-primary mt-2 py-2 px-4">Learn More</a>
+                    <a href="learrnmore.html" class="btn btn-primary mt-2 py-2 px-4">Learn More</a>
                 </div>
             </div>
         </div>
