learn more page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a href="index.html" class="nav-item nav-link active">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
                     <a href="class.html" class="nav-item nav-link">Classes</a>
-                    <a href="team.html" class="nav-item nav-link">Team</a>
+                    <!-- <a href="team.html" class="nav-item nav-link">Team</a> -->
                     <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                     <a href="blog.html" class="nav-item nav-link">Blog </a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -222,7 +222,7 @@
                                 <div class="form-group">
                                     <select class="custom-select border-0 px-4" style="height: 47px;" name="class">
                                         <option selected>Select A Class</option>
-                                        <option value="5">Class 5</option>
+                                   
                                         <option value="6">Class 6</option>
                                         <option value="7">Class 7</option>
                                         <option value="8">Class 8</option>
@@ -295,7 +295,7 @@
                             <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
                             <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>About Us</a>
                             <a class="text-white mb-2" href="class.html"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
-                            <a class="text-white mb-2" href="team.html"><i class="fa fa-angle-right mr-2"></i>Our Team</a>
+                            <!-- <a class="text-white mb-2" href="team.html"><i class="fa fa-angle-right mr-2"></i>Our Team</a> -->
                             <a class="text-white mb-2" href="blog.html"><i class="fa fa-angle-right mr-2"></i>Our Blog</a>
                             <a class="text-white" href="Contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                         </div>
