--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@
                 <a href="index.html" class="nav-item nav-link ">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="class.html" class="nav-item nav-link">Classes</a>
-                <a href="team.html" class="nav-item nav-link">Team</a>
+                <!-- <a href="team.html" class="nav-item nav-link">Team</a> -->
                 <a href="gallery.html" class="nav-item nav-link active">Gallery</a>
                 
                         <a href="blog.html" class="nav-item nav-link">Blog </a>
@@ -195,7 +195,7 @@
                 <a class="text-white mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
                 <a class="text-white mb-2" href="about.html"><i class="fa fa-angle-right mr-2"></i>About Us</a>
                 <a class="text-white mb-2" href="class.html"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
-                <a class="text-white mb-2" href="team.html"><i class="fa fa-angle-right mr-2"></i>Our Team</a>
+                <!-- <a class="text-white mb-2" href="team.html"><i class="fa fa-angle-right mr-2"></i>Our Team</a> -->
                 <a class="text-white mb-2" href="blog.html"><i class="fa fa-angle-right mr-2"></i>Our Blog</a>
                 <a class="text-white" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
             </div>
