--- a/about.html
+++ b/about.html
@@ -42,6 +42,16 @@
     </div>
     </nav>
     </div>
+    <div class="container-fluid bg-primary mb-5">
+        <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 400px">
+            <h3 class="display-3 font-weight-bold text-white">About</h3>
+            <div class="d-inline-flex text-white">
+                <p class="m-0"><a class="text-white" href="">Home</a></p>
+                <p class="m-0 px-2">/</p>
+                <p class="m-0">About</p>
+            </div>
+        </div>
+    </div>
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="row align-items-center">
